--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   },
   "homepage": "https://github.com/Sullyryan0319/Adventure-Capstone#readme",
   "dependencies": {
+    "config": "^3.3.6",
     "express": "^4.17.1",
+    "mongoose": "^6.1.1",
     "nodemon": "^2.0.15"
   }
 }
