--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "config": "^3.3.6",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "joi": "^17.5.0",
     "mongoose": "^6.1.1",
     "nodemon": "^2.0.15"
   }
