Add routes for reviews + hash passwords for adventurer and venue

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/Sullyryan0319/Adventure-Capstone#readme",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "config": "^3.3.6",
     "cors": "^2.8.5",
     "express": "^4.17.1",
