--- a/Adventure-Capstone-Frontend/package.json
+++ b/Adventure-Capstone-Frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-google-maps/api": "^2.7.0",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
@@ -14,6 +15,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.1.1",
     "react-scripts": "5.0.0",
+    "react-select": "^5.2.1",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
